--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+a{
+  text-decoration: none;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
