--- a/src/css/LocationFormHelper.css
+++ b/src/css/LocationFormHelper.css
@@ -2,3 +2,13 @@
   width: 500px;
   height:500px;
 }
+.latlng{
+  color:#d0cdd1;
+  text-align: right;
+  float: right;
+  font-size: 12px;
+}
+.current-location{
+  display: inline-block;
+  margin: 5px 10px;
+}
