--- a/src/css/LocationFormHelper.css
+++ b/src/css/LocationFormHelper.css
@@ -1,3 +1,9 @@
+.location-form-helper-flex{
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+}
+
 .location-form-map{
   width: 500px;
   height:500px;
@@ -5,7 +11,7 @@
 .latlng{
   color:#d0cdd1;
   text-align: right;
-  float: right;
+  /*float: right;*/
   font-size: 12px;
 }
 .current-location{
