--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,23 +1,50 @@
-.App {
+.app {
   text-align: center;
+}
+body{
+  background-color: #f9f9f9;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 a{
   text-decoration: none;
 }
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
 
-.App-header {
+.app-header-logo-container{
+display: inline-block;
+width: 50px;
+position: absolute;
+top: 5px;
+left: 0;
+}
+.app-header {
+
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  padding: 5px 20px;
   color: white;
+  text-align: left;
+  display: block;
+
+}
+.app-header-blur{
+  filter: blur(10px);
+  height: 10px;
+  background-color: #222;
+
+}
+.app-header-container{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding-bottom: 30px;
+  z-index: 10;
 }
 .navbar{
 list-style: none;
 display: inline-block;
+margin: 0;
+padding-left: 20px;
 }
 .nav-item{
   display: inline-block;
@@ -27,11 +54,37 @@ display: inline-block;
 text-decoration: none;
 color: inherit;
 cursor: pointer;
+font-weight: 200;
+transition: all 500ms;
 }
-.App-intro {
+.link-active{
+  border-bottom: 2px solid lightblue;
+  border-radius: 2px;
+  font-weight: 400;
+
+  /*position: relative;*/
+}
+/*.link-active::before{
+content : "";
+ position: absolute;
+ left    : 15%;
+ bottom  : -2px;
+ height  : 1px;
+ width   : 70%;
+ border-radius: 10px;
+ border-bottom:2px solid white;
+
+}*/
+.app-intro {
   font-size: large;
 }
-
+.app-body{
+  margin-top: 90px;
+}
+.app-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
