--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,6 +8,7 @@ body{
 }
 a{
   text-decoration: none;
+      color: inherit;
 }
 
 .app-header-logo-container{
@@ -49,6 +50,7 @@ padding-left: 20px;
 .nav-item{
   display: inline-block;
   margin: 10px;
+  border-bottom: 0px solid rgba(#fff,0);
 }
 .nav-item a{
 text-decoration: none;
@@ -60,7 +62,7 @@ transition: all 500ms;
 .link-active{
   border-bottom: 2px solid lightblue;
   border-radius: 2px;
-  font-weight: 400;
+  /*font-weight: 400;*/
 
   /*position: relative;*/
 }
