made state changes safe and ironed out weird stuff

--- a/src/css/EventFilterBar.css
+++ b/src/css/EventFilterBar.css
@@ -15,3 +15,7 @@ display: inline-block;
 .dist-filter{
   max-width: 100px;
 }
+.filter-selector-container{
+  max-width: 700px;
+  margin: auto;
+}
