--- a/src/css/App.css
+++ b/src/css/App.css
@@ -43,7 +43,7 @@ left: 0;
 }
 .navbar{
 list-style: none;
-display: inline-block;
+display: block;
 margin: 0;
 padding-left: 20px;
 }
@@ -58,6 +58,9 @@ color: inherit;
 cursor: pointer;
 font-weight: 200;
 transition: all 500ms;
+}
+.login-link{
+  float: right;
 }
 .link-active{
   border-bottom: 2px solid lightblue;
@@ -82,10 +85,17 @@ content : "";
 }
 .app-body{
   margin-top: 90px;
+  min-height: 80vh;
+  
 }
 .app-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
+}
+.app-footer{
+  width: 100%;
+  height: 150px;
+  background-color: #595d49;
 }
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
