--- a/src/css/NewEvent.css
+++ b/src/css/NewEvent.css
@@ -2,5 +2,12 @@
   width: 100%;
   max-width: 600px;
   margin: 10px auto;
-  text-align:left; 
+  text-align:left;
+}
+.new-event-create-button{
+  min-width: 88px;
+  width: 100%;
+  max-width: 400px;
+  margin: auto;
+  display: block !important;
 }
