--- a/src/css/App.css
+++ b/src/css/App.css
@@ -20,7 +20,7 @@ left: 0;
 }
 .app-header {
 
-  background-color: #222;
+  background-color: #333;
   padding: 5px 20px;
   color: white;
   text-align: left;
@@ -97,7 +97,6 @@ content : "";
   height: 150px;
   background-color: #595d49;
 }
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.nice-heading{
+  font-weight: 200;
 }
