--- a/src/css/Register.css
+++ b/src/css/Register.css
@@ -13,3 +13,8 @@
 .necessary-explanation{
   color:lightgrey;
 }
+.register-form-container{
+  max-width: 500px;
+  margin: 20px auto;
+  padding: 1px;
+}
