--- a/src/css/Subheader.css
+++ b/src/css/Subheader.css
@@ -6,5 +6,5 @@
   padding: 0;
   background-color: #00bcd4;
   z-index: 20;
-  box-shadow: 0px 0px 10px 0px black;
+  box-shadow:  0px 4px 10px -3px #05002d;
 }
